hphp/test/zend/good/ext/standard/tests/strings/bug21744.php
<?php
$test = <<< HERE
<a href="test?test\\!!!test">test</a>
<!-- test -->
HERE;

print strip_tags($test, '');
print strip_tags($test, '<a>');
?>